--- a/package.json
+++ b/package.json
@@ -6,8 +6,29 @@
   "repository": "git@github.com:TugOfWords/tug-of-words-server.git",
   "author": "Charlie Crouse <charlietcrouse@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "mocha **/*.test.js --recursive --exit",
+    "lint": "eslint . --ext .js",
+    "validate": "npm ls"
+  },
   "dependencies": {
     "express": "^4.16.2",
     "socket.io": "^2.0.4"
-  }
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "mocha": "^5.0.0",
+    "precommit-hook-eslint": "^3.0.0",
+    "socket.io-client": "^2.0.4"
+  },
+  "pre-commit": [
+    "lint",
+    "validate",
+    "test"
+  ]
 }
