Add firebase real-time database

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
+    "firebase": "^4.9.1",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
