--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "firebase": "^4.9.1",
+    "random-words": "^1.0.0",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
