--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "validate": "npm ls"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "firebase": "^4.9.1",
     "random-words": "^1.0.0",
