--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   "extends": "airbnb",
   "parser": "babel-eslint",
   "rules": {
-    "no-console": 0
+    "no-console": 0,
+    "no-underscore-dangle": "off"
   }
 }
