--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^4.9.1",
     "random-words": "^1.0.0",
     "rword": "^2.2.0",
+    "shortid": "^2.2.8",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
